# tdd-fastapi-template

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml  release.sh
.github/workflows/: main.yml
db/: Dockerfile
fastapi_tdd_docker/: Dockerfile  Dockerfile.prod  requirements.txt
fastapi_tdd_docker/app/: config.py  db.py  main.py  summarizer.py
fastapi_tdd_docker/app/api/: crud.py  ping.py  summaries.py
fastapi_tdd_docker/tests/: conftest.py  test_ping.py  test_summaries.py
