[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Markus Nutz <markus.nutz@obi.de>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.58.0"
uvicorn = "^0.11.5"
asyncpg = "0.20.1"
tortoise-orm = "^0.16.13"
starlette = "^0.13.4"
pytest = "^5.2"
requests = "^2.24.0"
gunicorn = "^20.0.4"
pytest-cov = "^2.10.0"
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^4.3.21"
newspaper3k = "^0.2.8"

[tool.poetry.dev-dependencies]
commitizen = "^1.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
